# tictactoe

./: Cargo.toml
backend/: .env  Cargo.toml
backend/src/: main.rs  state.rs  ws.rs
backend/src/auth/: jwt.rs  middleware.rs
backend/src/routes/: room.rs  user.rs
db/: .env  Cargo.toml
db/migrations/: 20240101000000_create_users_table.sql  20240102000000_create_games_tables.sql
db/src/: lib.rs
db/src/models/: games.rs  mod.rs  users.rs
