[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
anyhow = "1.0"
argon2 = "0.5.3"
futures = "0.3"
chrono = { version = "0.4.42", features = ["serde"] }
db = { path = "../db" }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
pem = "3.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.48.0", features = ["full"] }
dashmap = "6.1.0"
actix-ws = "0.3.0"
futures-util = "0.3.31"
