[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
num-traits = "0.2"
serde = { version = "1.0.228", features = ["derive", "std"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid", "bigdecimal"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
